model instances examples

--- a/system.capability.examples/.project
+++ b/system.capability.examples/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>system.capability.example</name>
+	<name>system.capability.examples</name>
 	<comment></comment>
 	<projects>
 	</projects>
